--- a/bracket.html
+++ b/bracket.html
@@ -102,7 +102,7 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>9</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1339563421008838656?s=21">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
