--- a/bracket.html
+++ b/bracket.html
@@ -107,7 +107,7 @@
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>10</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1339630589192921088?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
