--- a/bracket.html
+++ b/bracket.html
@@ -112,7 +112,7 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>11</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1339679484040065038?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
