--- a/bracket.html
+++ b/bracket.html
@@ -117,7 +117,7 @@
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>12</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1339744616845860869?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
