--- a/bracket.html
+++ b/bracket.html
@@ -122,22 +122,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>13</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1339957807748182028?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>14</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340004886683987968?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>15</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340052510267092996?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>16</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340086162338287616?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
