Fixed color code for Cadet Blue

--- a/bracket.html
+++ b/bracket.html
@@ -425,7 +425,7 @@
         <li class='game-right game-bottom' style="background-color:#2C9ABE; color:#fff">Cerulean</li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top' style="background-color:#A93474; color:#fff">Red-Violet</li>
-        <li class='game-right game-bottom' style="background-color:##A3ABB5; color:#fff">Cadet Blue</li>
+        <li class='game-right game-bottom' style="background-color:#A3ABB5; color:#fff">Cadet Blue</li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top' style="background-color:#F6D170; color:#000">Goldenrod</li>
         <li class='game-right game-bottom' style="background-color:#E4799A; color:#000">Tickle Me Pink</li>
