--- a/bracket.html
+++ b/bracket.html
@@ -62,22 +62,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>1</span>
-          <span><a href="https://twitter.com/sbarolo/status/1338913749034553346?s=20">In Progress</a></span>
+          <span style="background-color:#43609A; color:#fff">Blue</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>2</span>
-          <span><a href="https://twitter.com/sbarolo/status/1338924629881204736?s=20">In Progress</a></span>
+          <span style="background-color:#C2764B; color:#fff">Wisteria</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>3</span>
-          <span><a href="https://twitter.com/sbarolo/status/1338971506345455620?s=20">In Progress</a></span>
+          <span style="background-color:#94C6DB; color:#fff">Cornflower</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>4</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339018696757555203?s=20">In Progress</a></span>
+          <span style="background-color:#D86D53; color:#fff">Burnt Sienn</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
@@ -334,27 +334,27 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
           <span>17</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340287159065063431?s=20">In Progress</a></span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
           <span>18</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340335043185618946?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
           <span>19</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340383251861549060?s=20">In Progress</a></span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
           <span>20</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340444744661479424?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
           <span>21</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340675548528451592?s=20">In Progress</a></span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
