Fixing wisteria's color

--- a/bracket.html
+++ b/bracket.html
@@ -13,7 +13,7 @@
         <li class='game-left game-bottom' style="background-color:#C2764B; color:#fff">Raw Sierra</li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top' style="background-color:#A84B48; color:#fff">Chestnut</li>
-        <li class='game-left game-bottom' style="background-color:#C2764B; color:#fff">Wisteria</li>
+        <li class='game-left game-bottom' style="background-color:#BC9ABA; color:#fff">Wisteria</li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top' style="background-color:#E78899; color:#fff">Salmon</li>
         <li class='game-left game-bottom' style="background-color:#94C6DB; color:#fff">Cornflower</li>
@@ -67,7 +67,7 @@
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>2</span>
-          <span style="background-color:#C2764B; color:#fff">Wisteria</span>
+          <span style="background-color:#BC9ABA; color:#fff">Wisteria</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
