--- a/bracket.html
+++ b/bracket.html
@@ -82,22 +82,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>5</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339216520510115840?s=20">In Progress</a></span>
+          <span style="background-color:#4B619B; color:#fff">Bluetiful</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>6</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339272272704638980?s=20">In Progress</a></span>
+          <span style="background-color:#DC457D; color:#fff">Violet-Red</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>7</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339313686192807941?s=20">In Progress</a></span>
+          <span style="background-color:#77548F; color:#fff">Violet</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>8</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339365224953077761?s=20">In Progress</a></span>
+          <span style="background-color:#EFA654; color:#fff">Yellow-Orange</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
@@ -358,22 +358,22 @@
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340716491340193803?s=20">In Progress</a></span>
           <span>22</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340792177836867584?s=20">In Progress</a></span>
           <span>23</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1340822022633500682?s=20">In Progress</a></span>
           <span>24</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341040353743425538?s=20">In Progress</a></span>
           <span>25</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
