Update matches and winners

--- a/bracket.html
+++ b/bracket.html
@@ -102,22 +102,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>9</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339563421008838656?s=21">In Progress</a></span>
+          <span style="background-color:#75985B; color:#fff">Asparagus</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>10</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339630589192921088?s=20">In Progress</a></span>
+          <span style="background-color:#95CBAA; color:#000">Sea Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>11</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339679484040065038?s=20">In Progress</a></span>
+          <span style="background-color:#C2B9B1; color:#000">Silver</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>12</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339744616845860869?s=20">In Progress</a></span>
+          <span> style="background-color:#C0D67C; color:#000">Yellow-Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
@@ -378,37 +378,37 @@
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341069596493815808?s=20">In Progress</a></span>
           <span>26</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341120333739417600?s=20">In Progress</a></span>
           <span>27</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341171657000579074?s=20">In Progress</a></span>
           <span>28</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341368253495521285?s=20">In Progress</a></span>
           <span>29</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341408366837571586?s=20">In Progress</a></span>
           <span>30</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341488668595384320?s=20">In Progress</a></span>
           <span>31</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341534679472730112?s=20">In Progress</a></span>
           <span>32</span>
         </li>
         <li class='spacer'>&nbsp;</li>
