Fixing Yellow-Green style issue

--- a/bracket.html
+++ b/bracket.html
@@ -117,7 +117,7 @@
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>12</span>
-          <span> style="background-color:#C0D67C; color:#000">Yellow-Green</span>
+          <span style="background-color:#C0D67C; color:#000">Yellow-Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
