Update and adding charities

--- a/bracket.html
+++ b/bracket.html
@@ -122,22 +122,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>13</span>
-          <span><a href="https://twitter.com/sbarolo/status/1339957807748182028?s=20">In Progress</a></span>
+          <span style="background-color:#D5D2C6; color:#000">Timberwolf</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>14</span>
-          <span><a href="https://twitter.com/sbarolo/status/1340004886683987968?s=20">In Progress</a></span>
+          <span style="background-color:#5B9D70; color:#fff">Forest Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>15</span>
-          <span><a href="https://twitter.com/sbarolo/status/1340052510267092996?s=20">In Progress</a></span>
+          <span style="background-color:#CAA8C2; color:#fff">Purple Mountains Majesty</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>16</span>
-          <span><a href="https://twitter.com/sbarolo/status/1340086162338287616?s=20">In Progress</a></span>
+          <span style="background-color:#BFC7D9; color:#000">Periwinkle</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -145,22 +145,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>33</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341775709623214085?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>34</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341796437672284161?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>35</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341868528014659589?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>36</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1341911683376279558?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
@@ -230,7 +230,8 @@
       </ul>
       <ul class='round finals'>
         <li class='spacer'>&nbsp;</li>
-        <li class='title'>#crayonbracket</li>
+        <li><b>#crayonbracket</b>
+        <p><center>Scroll down to see the bracketer-selected charities!</li>
         <li class='spacer'>&nbsp;</li>
         <li class='game final'>
           <span>64</span>
@@ -333,22 +334,22 @@
       <ul class='round round-1'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1340287159065063431?s=20">In Progress</a></span>
+          <span style="background-color:#52629B; color:#fff">Indigo</span>
           <span>17</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1340335043185618946?s=20">In Progress</a></span>
+          <span style="background-color:#268CA5; color:#fff">Blue-Green</span>
           <span>18</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1340383251861549060?s=20">In Progress</a></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
           <span>19</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1340444744661479424?s=20">In Progress</a></span>
+          <span style="background-color:#A93474; color:#fff">Red-Violet</span>
           <span>20</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -465,6 +466,95 @@
         <li class='spacer'>&nbsp;</li>
       </ul>
     </div>
+  </section>
+  <section>
+    If you're enjoying the #crayonbracket, consider donating to a charity of your choice, or pick one of the charities selected by bracketers before the matches:
+    <a href="https://www.forgottenharvest.org/">Forgotten Harvest</a> &bull;
+    <a href="https://hshv.org">Humane Society of Huron Valley</a> &bull;
+    <a href="https://alive-inc.org">Alive!</a> &bull;
+    <a href="http://movement.vote">Movement Voter Project </a> &bull;
+    <a href="https://rmhcofalbany.org/">Ronald McDonald House of the Capital Region</a> &bull;
+    <a href="https://mightycause.com/organization/Black-Mamas-Matter-Alliance">Black Mamas Matter Alliance</a> &bull;
+    <a href="https://givemn.org/organization/Pimento-Foundation">Pimento Relief Services</a> &bull;
+    <a href="https://wck.org">World Central Kitchen</a> &bull;
+    <a href="https://bgcdc.org">Boys and Girls Club of Dane County</a> &bull;
+    <a href="https://www.sfcenter.org/">SF LGBTQ Center</a> &bull;
+    <a href="https://www.uwkc.org/">United Way of King County</a> &bull;
+    <a href="https://www.foodgatherers.org/">Food Gatherers</a> &bull;
+    <a href="https://indigenousmutualaid.org">Radical Indigenous Mutual Aid Emergency Fund</a> &bull;
+    <a href="https://the15whitecoats.org/?tx=3M545998HM3895837&st=Completed&amt=10.00&cc=USD&cm=&item_number=The%2015%20White%20Coats&item_name=The%2015%20White%20Coats">The 15 White Coats</a> &bull;
+    <a href="https://www.worldwildlife.org/">World Wildlife Federation</a> &bull;
+    <a href="http://nokidhungry.org">No Kid Hungry</a> &bull;
+    <a href="https://www.the519.org/">The519</a> &bull;
+    <a href="https://instagram.com/woman.inc/">W.O.M.A.N. Inc</a> &bull;
+    <a href="https://thehopeclinic.org/">The Hope Clinic MI</a> &bull;
+    <a href="https://www.defundhps.com/">Defund Hamilton Police</a> &bull;
+    <a href="https://www.hearttoheart.org/">Heart to Heart international</a> &bull;
+    <a href="https://www.aclunc.org/home">ACLU of Northern California</a> &bull;
+    <a href="http://rosiesplace.org">Rosie’s Place</a> &bull;
+    <a href="https://www.salvationarmyusa.org/usn/">Salvation Army</a> &bull;
+    <a href="https://feedingchittenden.org">Feeding Chittenden</a> &bull;
+    <a href="https://www.canwashtenaw.org/">Community Action Network - Washtenaw County</a> &bull;
+    <a href="https://www.pittsburghfoodbank.org/">Greater Pittsburgh Community Foodbank</a> &bull;
+    <a href="https://twocc.us">Trans Women of Color Collective</a> &bull;
+    <a href="https://www.everymeal.org/">Every Meal</a> &bull;
+    <a href="https://england.shelter.org.uk/">Shelter</a> &bull;
+    <a href="https://seedinglabs.org/">Seeding Labs</a> &bull;
+    <a href="https://www.gbfb.org/">The Greater Boston Food Bank</a> &bull;
+    <a href="https://www.foodbankscanada.ca/">Food Banks Canada</a> &bull;
+    <a href="https://www.restosducoeur.org/">Restos Du Coeur</a> &bull;
+    <a href="https://www.angelman.org/">Angelman Syndrome Foundation</a> &bull;
+    <a href="https://regionalfoodbank.net/">Regional Food Bank of Northeastern NY</a> &bull;
+    <a href="https://foodbank.bc.ca/">Greater Vancouver Food Bank</a> &bull;
+    <a href="https://pbandjfund.org">PB&J Fund</a> &bull;
+    <a href="https://mdfoodbank.org">Maryland Food Bank</a> &bull;
+    <a href="http://healingcornerchicago.org">The Healing Corner</a> &bull;
+    <a href="https://www.heifer.org/">Heifer International</a> &bull;
+    <a href="https://2-harvest.org">2nd Harvest</a> &bull;
+    <a href="https://www.foodbanknyc.org/">Food Bank for New York City</a> &bull;
+    <a href="https://lacolectivasf.org/">La Colectiva</a> &bull;
+    <a href="https://lacolectiva.org/mutual-aid">La ColectiVA Mutual Aid Fund</a> &bull;
+    <a href="https://gc.cuny.edu/News/All-News/Detail?id=54807">CUNY Graduate Center Student Emergency Fund</a> &bull;
+    <a href="https://oregonfoodbank.org">Oregon Food Bank</a> &bull;
+    <a href="http://butterfliesandtheirpeople.org">Butterflies and Their People</a> &bull;
+    <a href="https://arcessex.org/">The Arc of Essex County</a> &bull;
+    <a href="https://www.stjude.org/">St Jude Children’s Research Hospital</a> &bull;
+    Food Distribution Center - Memorial Blvd &bull;
+    <a href="https://havenofgracestl.org/">Haven of Grace Women and Children's Shelter</a> &bull;
+    <a href="https://www.stlouischildrens.org/">St. Louis Children's Hospital</a> &bull;
+    <a href="https://www.brandonu.ca/give/emergency-fund/">Brandon University Student Emergency Fund</a> &bull;
+    <a href="https://licares.org/">Long Island Cares</a> &bull;
+    <a href="https://www.thetrevorproject.org/">The Trevor Project</a> &bull;
+    <a href="https://vitaminangels.org">Vitamin Angels</a> &bull;
+    <a href="http://unitedwaydanecounty.org">United Way of Dane County</a> &bull;
+    <a href="https://www.americares.org/">Americares</a> &bull;
+    <a href="https://www.mttamcollege.org/">Mt. Tamalpais College (formerly Prison University Project)</a> &bull;
+    <a href="http://nndoh.org">Navajo Nation COVID Relief</a> &bull;
+    <a href="https://getusppe.org/">Get Us PPE</a> &bull;
+    <a href="https://www.svp.ie/home.aspx">Society of St. Vincent de Paul</a> &bull;
+    <a href="https://www.mealsonwheelsamerica.org/">Meals on Wheels America</a> &bull;
+    <a href="https://www.plannedparenthoodaction.org/">Planned Parenthood Action Fund</a>
+    <a href="https://linktr.ee/SomervilleFridge">Somerville Fridge</a> &bull;
+    <a href="http://capitalareafoodbank.org">Capital Area Food Bank</a> &bull;
+    <a href="https://stlfoodbank.org/">St. Louis Area Foodbank</a> &bull;
+    <a href="https://gathernh.org">Gather</a> &bull;
+    <a href="https://facebook.com/groups/502401850648815/">COVID 19 Mutual Aid Madison</a> &bull;
+    <a href="https://www.lls.org/">Leukemia and Lymphoma Society</a> &bull;
+    <a href="https://northwestharvest.org">Northwest Harvest</a> &bull;
+    <a href="https://starisland.thankyou4caring.org/donate">Star Island Annual Fund</a>
+    <a href="https://www.memphisrox.org/">Memphis Rox</a> &bull;
+    <a href="https://www.oregonfoodbank.org/">Oregon Food Bank</a>
+    <a href="https://www.aclu.org/">ACLU</a> &bull;
+    <a href="https://www.sisterspgh.org/">SisTers PGH</a> &bull;
+    <a href="https://gcfb.org">Gleamers</a> &bull;
+    Townes at the Terraces Holiday Drive (West Baltimore, MD) &bull;
+    <a href="https://madebymomma.org/">Made by Momma</a> &bull;
+    <a href="https://wegotthisseattle.co">We Got This Seattle</a> &bull;
+    <a href="https://www.archcitydefenders.org/">Arch City Defenders</a> &bull;
+    <a href="https://www.forthegworls.party/home">For the Gworls</a> &bull;
+    <a href="https://sites.google.com/view/bostonfoodnotbombs/home">Food Not Bombs of Boston</a> &bull;
+    <a href="https://www.rizema.org/">RIZE Massachusetts</a> &bull;
+    <a href="http://jfonelp.org/">Justice for Our Neighbors El Paso</a>
   </section>
 </body
 </html>
