--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>37</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342117533776801792?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>38</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342162871451594755?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>39</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342212906952364033?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>40</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342282463649931266?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -291,22 +291,22 @@
       <ul class='round round-2'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342499839020511233?s=20">In Progress</a></span>
           <span>41</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342525776755888129?s=20">In Progress</a></span>
           <span>42</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342586765421535241?s=20">In Progress</a></span>
           <span>43</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1342615765363646464?s=20">In Progress</a></span>
           <span>44</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -354,22 +354,22 @@
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1340675548528451592?s=20">In Progress</a></span>
+          <span style="background-color:#F6D170; color:#000">Goldenrod</span>
           <span>21</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1340716491340193803?s=20">In Progress</a></span>
+          <span style="background-color:#D196B7; color:#000">Orchid</span>
           <span>22</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1340792177836867584?s=20">In Progress</a></span>
+          <span style="background-color:#49B7B4; color:#fff">Robins Egg Blue</span>
           <span>23</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1340822022633500682?s=20">In Progress</a></span>
+          <span style="background-color:#7F3368; color:#fff">Plum</span>
           <span>24</span>
         </li>
         <li class='spacer'>&nbsp;</li>
