--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1341040353743425538?s=20">In Progress</a></span>
+          <span style="background-color:#D62940; color:#fff">Scarlet</span>
           <span>25</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
