Blue's massacre update

--- a/index.html
+++ b/index.html
@@ -145,42 +145,42 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>33</span>
-          <span><a href="https://twitter.com/sbarolo/status/1341775709623214085?s=20">In Progress</a></span>
+          <span style="background-color:#43609A; color:#fff">Blue</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>34</span>
-          <span><a href="https://twitter.com/sbarolo/status/1341796437672284161?s=20">In Progress</a></span>
+          <span style="background-color:#94C6DB; color:#fff">Cornflower</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>35</span>
-          <span><a href="https://twitter.com/sbarolo/status/1341868528014659589?s=20">In Progress</a></span>
+          <span style="background-color:#4B619B; color:#fff">Bluetiful</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>36</span>
-          <span><a href="https://twitter.com/sbarolo/status/1341911683376279558?s=20">In Progress</a></span>
+          <span style="background-color:#77548F; color:#fff">Violet</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>37</span>
-          <span><a href="https://twitter.com/sbarolo/status/1342117533776801792?s=20">In Progress</a></span>
+          <span style="background-color:#95CBAA; color:#000">Sea Green</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>38</span>
-          <span><a href="https://twitter.com/sbarolo/status/1342162871451594755?s=20">In Progress</a></span>
+          <span style="background-color:#C0D67C; color:#000">Yellow-Green</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>39</span>
-          <span><a href="https://twitter.com/sbarolo/status/1342212906952364033?s=20">In Progress</a></span>
+          <span style="background-color:#5B9D70; color:#fff">Forest Green</span>
         </li>
         <li class='game-left spacer'>&nbsp;</li>
         <li class='game-left game-bottom'>
           <span>40</span>
-          <span><a href="https://twitter.com/sbarolo/status/1342282463649931266?s=20">In Progress</a></span>
+          <span style="background-color:#CAA8C2; color:#fff">Purple Mountains Majesty</span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -188,22 +188,22 @@
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>49</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343243020821381120?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer region region-right'></li>
         <li class='game-left game-bottom'>
           <span>50</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343258877018693634?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-left game-top'>
           <span>51</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343308438441496577?s=20">In Progress</a></span>
         </li>
         <li class='game-left spacer region region-right'></li>
         <li class='game-left game-bottom'>
           <span>52</span>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343375532709318656?s=20">In Progress</a></span>
         </li>
         <li class='spacer'>&nbsp;</li>
       </ul>
@@ -268,12 +268,12 @@
       <ul class='round round-3'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343576357989658624?s=20">In Progress</a></span>
           <span>53</span>
         </li>
         <li class='game-right spacer region region-left'></li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343602458019454977?s=20">In Progress</a></span>
           <span>54</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -291,22 +291,22 @@
       <ul class='round round-2'>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1342499839020511233?s=20">In Progress</a></span>
+          <span style="background-color:#268CA5; color:#fff">Blue-Green</span>
           <span>41</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1342525776755888129?s=20">In Progress</a></span>
+          <span style="background-color:#2C9ABE; color:#fff">Cerulean</span>
           <span>42</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1342586765421535241?s=20">In Progress</a></span>
+          <span style="background-color:#D196B7; color:#000">Orchid</span>
           <span>43</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1342615765363646464?s=20">In Progress</a></span>
+          <span style="background-color:#49B7B4; color:#fff">Robins Egg Blue</span>
           <span>44</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -379,37 +379,37 @@
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1341069596493815808?s=20">In Progress</a></span>
+          <span style="background-color:#5D5390; color:#fff">Blue-Violet</span>
           <span>26</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1341120333739417600?s=20">In Progress</a></span>
+          <span style="background-color:#9DCA8C; color:#000">Granny Smith Apple</span>
           <span>27</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1341171657000579074?s=20">In Progress</a></span>
+          <span style="background-color:#DF6137; color:#000">Red-Orange/span>
           <span>28</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1341368253495521285?s=20">In Progress</a></span>
+          <span style="background-color:#2A93B1; color:#fff">Pacific Blue</span>
           <span>29</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1341408366837571586?s=20">In Progress</a></span>
+          <span style="background-color:#E16A5E; color:#fff">Bittersweet</span>
           <span>30</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span><a href="https://twitter.com/sbarolo/status/1341488668595384320?s=20">In Progress</a></span>
+          <span style="background-color:#E58A9D; color:#fff">Mauvelous</span>
           <span>31</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span><a href="https://twitter.com/sbarolo/status/1341534679472730112?s=20">In Progress</a></span>
+          <span style="background-color:#80CAD4; color:#000">Sky Blue</span>
           <span>32</span>
         </li>
         <li class='spacer'>&nbsp;</li>
