--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343642133773873154?s=20">In Progress</a></span>
           <span>55</span>
         </li>
         <li class='game-right spacer region region-left'></li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span><a href="https://twitter.com/sbarolo/status/1343679886704181250?s=20">In Progress</a></span>
           <span>56</span>
         </li>
         <li class='spacer'>&nbsp;</li>
@@ -311,22 +311,22 @@
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span style="background-color:#5D5390; color:#fff">Blue-Violet</span>
           <span>45</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span style="background-color:#9DCA8C; color:#000">Granny Smith Apple</span>
           <span>46</span>
         </li>
         <li class='spacer'>&nbsp;</li>
         <li class='game-right game-top'>
-          <span></span>
+          <span style="background-color:#2A93B1; color:#fff">Pacific Blue</span>
           <span>47</span>
         </li>
         <li class='game-right spacer'>&nbsp;</li>
         <li class='game-right game-bottom'>
-          <span></span>
+          <span style="background-color:#80CAD4; color:#000">Sky Blue</span>
           <span>48</span>
         </li>
         <li class='spacer'>&nbsp;</li>
